# earthscopestraintools

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  README.md  ascii2tdb.py  bottle.py  bottle2mseed.py  bottle2tiledb.py  bottletar.py  consolidate_and_vacuum.py  edid.py  filter_tests.ipynb  load_level2_data_from_local_tdb_zip.ipynb  pyproject.toml  read_s3_array.ipynb  requirements.txt  strainmeter.py  straintiledbarray.py  tdb2ascii.py  tdb2tdb.py  test_lib.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst
docs/source/api/: earthscopestraintools.bottle2tdb.rst  earthscopestraintools.datasources_api_interact.rst  earthscopestraintools.event.rst  earthscopestraintools.gtsm_metadata.rst  earthscopestraintools.mseed_tools.rst  earthscopestraintools.processing.rst  earthscopestraintools.rst  earthscopestraintools.tdb2ascii.rst
docs/source/notebooks/: TidalCalibrationEarthscopestraintools.ipynb  baytap_demo.ipynb  level2.ipynb  load_level2.ipynb  plot_event.ipynb
docs/source/pages/: DataAvailability.md  DataStructures.md  Installation.md  IntroductoryMaterial.md  Metadata.md
source/: conf.py
src/earthscopestraintools/: ascii2tdb.py  ascii_tools.py  bottle.py  bottle2mseed.py  bottle2tdb.py  bottle2tiledb.py  bottletar.py  datasources_api_interact.py  edid.py  event.py  event_processing.py  event_site_terms.txt  gtsm_metadata.py  mseed_tools.py  processing.py  strain_visualization.py  straintiledbarray.py  tdb2ascii.py  tdb2tdb.py  tdb2ts.py  tiledbtools.py  timeseries.py
src/earthscopestraintools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/es-strain-tools/btl/: bottletar.py
src/es_strain_tools_lib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test_ascii2tdb.py  test_bottle2mseed.py  test_bottle2tdb.py  test_bottletar.py  test_edid.py  test_gtsm_metadata.py  test_tdb2ascii.py  test_tdb2tdb.py  test_ts2tdb.py
