[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "es-strain-tools"
version ="0.0.0"
authors = [
  { name="Mike Gottlieb", email="mike.gottlieb@eartscope.org" },
]
description = "A collection of utilities for EarthScope strainmeter data format translation"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://gitlab.com/earthscope/gds/strain/es-strain-tools"


[project.optional-dependencies]
mseed = ["obspy"]
tdb = ["tiledb", "es_datasources_client"]
