[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "earthscopestraintools"
version ="0.1.37"
authors = [
  { name="Mike Gottlieb", email="mike.gottlieb@eartscope.org" },
]
description = "A collection of utilities for working with EarthScope strainmeter data"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "scipy>=1.10.1",
    "numpy>=1.24.1",
    "pandas>=2.1.0",
    "requests>=2.28.2",
    #"xmltodict>=0.13.0",
    "geopy>=2.3.0"
]

[project.optional-dependencies]
mseed = [ "obspy>=1.4.0" ]
tiledb = ["tiledb==0.23.0", "pyarrow==13.0.0"]
plotting = ["ipympl>=0.9.3"]

[project.urls]
"Homepage" = "https://gitlab.com/earthscope/gds/strain/earthscopestraintools"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
earthscopestraintools = ["*.txt", "*.rst"]

